--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -150,22 +150,22 @@
 \begin{document}
 
 % Front matter
-\input{frontmatter/masters_title_page}
+% \input{frontmatter/masters_title_page}
 \pagenumbering{roman}
-\input{frontmatter/acknowledgements}
-\input{frontmatter/declaration}
-\input{frontmatter/abstract}
+% \input{frontmatter/acknowledgements}
+% \input{frontmatter/declaration}
+% \input{frontmatter/abstract}
 \tableofcontents
-\listoffigures
-\listoftables
-\input{frontmatter/nomenclature}
+% \listoffigures
+% \listoftables
+% \input{frontmatter/nomenclature}
 \newpage
 \pagenumbering{arabic}
 
 % Contents
-\input{introduction/introduction.tex}
-\input{modelling/modelling.tex}
-% \input{system_id/system_id.tex}
+% \input{introduction/introduction.tex}
+% \input{modelling/modelling.tex}
+\input{system_id/system_id.tex}
 
 \input{system_id/plots/MAE_vs_Ts.tex}
 \input{system_id/plots/MAE_diff.tex}
@@ -176,7 +176,7 @@
 \input{system_id/plots/singular_values.tex}
 
 % \input{system_id/system_id.tex}
-\input{conclusion/conclusion.tex}
+% \input{conclusion/conclusion.tex}
 
 % Bibliography
 \bibliography{Thesis.bib}
