Continued writing and fixed missing $ error

--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -5,6 +5,7 @@
     
 \subsection{Payload mass estimation}
     RLS
+    Cannot work if quadrotor mass also changes, because assume that $m_q$ is known.
 
 \subsection{Cable length estimation}
     The cable length is estimated from the measurement of natural frequency of the swinging payload.
