--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -142,6 +142,18 @@
 \newcommand{\murray}[1]{\textcolor{blue}{#1}}
 \newcommand{\willem}[1]{\textcolor{red}{#1}}
 
+% Keep figure in section
+% \usepackage{placeins}
+
+% \let\Oldsection\section
+% \renewcommand{\section}{\FloatBarrier\Oldsection}
+
+% \let\Oldsubsection\subsection
+% \renewcommand{\subsection}{\FloatBarrier\Oldsubsection}
+
+% \let\Oldsubsubsection\subsubsection
+% \renewcommand{\subsubsection}{\FloatBarrier\Oldsubsubsection}
+
 % Glossary
 % \usepackage[acronym, nomain, nopostdot, nonumberlist, nogroupskip, toc, automake=false]{glossaries}
 %\loadglsentries{glossary}
@@ -168,12 +180,12 @@
 \input{system_id/system_id.tex}
 
 \input{system_id/plots/MAE_vs_Ts.tex}
-\input{system_id/plots/MAE_diff.tex}
-\input{system_id/plots/MAE_vs_q.tex}
-\input{system_id/plots/MAE_vs_train_Simulink_angular_rate.tex}
-\input{system_id/plots/noise_vs_no_noise.tex}
-\input{system_id/plots/havok_vs_dmd_noise.tex}
-\input{system_id/plots/singular_values.tex}
+% \input{system_id/plots/MAE_diff.tex}
+% \input{system_id/plots/MAE_vs_q.tex}
+% \input{system_id/plots/MAE_vs_train_Simulink_angular_rate.tex}
+% \input{system_id/plots/noise_vs_no_noise.tex}
+% \input{system_id/plots/havok_vs_dmd_noise.tex}
+% \input{system_id/plots/singular_values.tex}
 
 % \input{system_id/system_id.tex}
 % \input{conclusion/conclusion.tex}
